--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "WEB3A-15108-Hani-Fania-REACT",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://fanianugroho.github.io/WEB3A-15108-Hani-Fania-REACT",
+  "homepage": "https://fanianugroho.github.io/TES",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
